# get-a-job

./: .gitignore  CLAUDE.md  README.md  SKILL.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
commands/: help.md  sherlock.md
scripts/: migrate-profile.ts  pipeline-cli.ts  setup-db.ts
scripts/apply/: __init__.py  __main__.py  adapter.py  cli_shim.py  config.py  cover_letter.py  fingerprint.py  pdf_resolver.py  profile.py  pyproject.toml
scripts/apply/adapters/: __init__.py  ashby.py  generic_llm.py  greenhouse.py  lever.py
scripts/lib/: db-path.ts  profile-path.ts  profile-schema.ts
skills/add/: SKILL.md
skills/profile/: SKILL.md
skills/respond/: SKILL.md
skills/sherlock/: SKILL.md
skills/triage/: SKILL.md
tests/: test_ashby_smoke.py  test_cover_letter.py  test_generic_smoke.py  test_greenhouse_smoke.py  test_lever_smoke.py  test_pdf_resolver.py
tests/fixtures/: ashby_real.html  cover-letter-sample.html  greenhouse_real.html  greenhouse_sample.html  lever_real.html
